# marcus_ws

abstract_sensor/: CMakeLists.txt  package.xml
abstract_sensor/msg/: Abstractsensor.msg
abstract_sensor/script/: abstract_sensor_publisher.py
car_description/: CMakeLists.txt  package.xml
car_description/launch/: activate_marcusMovement_listrener_model.launch  basic_car.launch  basic_car_follow_marcus.launch  car22.launch  car_follow_person.launch  car_multiplerobots.launch  car_robot.launch  carro_basico.launch  certo.launch  functional.launch  jibo2_robot.launch  jibo_multiplerobots.launch  looking_for_the_car.launch  main.launch  main_right.launch  move_marcus.launch  my_launch_file.launch  my_launch_file2.launch  prius.launch  prius_car.launch  run_car_tf_listener.launch  run_marcus_tf_broadcaster.launch  run_person_tf_broadcaster.launch  spawn_standing_marcus.launch  static_transform.launch  teste_transform_static.launch
car_description/robots/: car.urdf.xacro
jibo_robot_description (1)/: CMakeLists.txt  package.xml
linux_course_files/: README.md
new_gurdy_version_description/: CMakeLists.txt  package.xml
new_jibo_description/: CMakeLists.txt
new_jibo_description (1)/: package.xml
prius_description/: CMakeLists.txt  package.xml
robot_control/: car_square_motion.py  dictionaries.py  enter_room.py  fav_movie.py  input.py  labirinto_mission.py  laser_list.py  lists.py  maze_mission.py  sleep_robot.py  test_for.py  test_functions3.py  test_if.py  test_input.py  test_while.py  variables.py
solution_jibo_description/: CMakeLists.txt  package.xml
(+61 files in other folders)
